syntax = "proto3";

package cart;

service CartService {
  rpc GetCartItemsByAuthId (GetCartByAuthIdRequest) returns (GetCartByAuthIdResponse);
}

message GetCartByAuthIdRequest {
  string authId = 1;
}

message GetCartByAuthIdResponse {
  repeated CartItem items = 1;
}

message CartItem {
  string productPublicId = 1;
  int32 quantity = 2;
}
