syntax = "proto3";

package product;

service ProductService {
  rpc GetProductsByProductPublicIds (GetProductsByProductPublicIdsRequest) returns (GetProductsByProductPublicIdsResponse);

  rpc GetProductByProductPublicId (GetProductByProductPublicIdRequest) returns (Product);
}

message GetProductByProductPublicIdRequest {
  string productPublicId = 1;
}

message GetProductsByProductPublicIdsRequest {
  repeated string productPublicIds = 1;
  bool useCaching = 2;
}

message GetProductsByProductPublicIdsResponse {
  repeated Product products = 1;
}

message Product {
  string productPublicId = 1;
  string storePublicId = 2;
  string name = 3;
  string description = 4;
  string slug = 5;
  float quantity = 6;
  string thumb = 7;
  float price = 8;
}
